Add table to layout

--- a/index.html
+++ b/index.html
@@ -4,14 +4,35 @@
 	<head>
 		<title>Collective Academy Directory</title>
 		<meta charset="UTF-8"/>
+		<link rel="stylesheet" href="css/index.css" type="text/css"/>
+		<link rel="icon" href="./img/ca-emblema-rojo.png">
 	</head>
 
 	<body>
-		<input type="password" id="password" placeholder="Contraseña">
-		<input type="submit" id="openDirectoryButton" value="Entrar">
-		or
-		<input type="submit" id="registerNewButton" value="Registrar"/>
+		<div id="indexTable">
+			<table>
+				<tr>
+					<th>¿Tienes contraseña?</th>
+					<th></th>
+					<th>Ingresa tus datos</th>
+				</tr>
+				<tr>
+					<th><input type="password" id="password" placeholder="Contraseña"></th>
+					<th>o</th>
+					<th><input type="submit" id="registerNewButton" value="Registrar"/></th>
+				</tr>
+				<tr>
+					<th><input type="submit" id="openDirectoryButton" value="Entrar"></th>
+					<th></th>
+					<th></th>
+				</tr>
+			</table>
+		</div>
 
+		
+		
+		
+		
 		<script src="./js/jquery.js" type="text/javascript"></script>
 		<script type="text/javascript" src="js/index.js"></script>
 	</body>
