--- a/register.html
+++ b/register.html
@@ -39,6 +39,9 @@
 			<input type="text" id="company" placeholder="Compañía actual"/>
 			<span class="errorMessage hiddenElement" id="errorCompany">Por favor introduce tu compañía</span>
 			<br><br>
+			<input type="text" id="picture" placeholder="Foto"/>
+			<span class="errorMessage hiddenElement" id="errorPicture">Por favor agrega una foto</span>
+			<br><br>
 			Relación con Collective Academy
 			<select id="groupSelector" onchange="showfield(this.options[this.selectedIndex].value)">
 				<option value="0">Selecciona un grupo...</option>
