--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Collective Academy Directory</title>
 		<meta charset="UTF-8"/>
 		<link rel="stylesheet" href="css/index.css" type="text/css"/>
-		<link rel="icon" href="./img/ca-emblema-rojo.png">
+		<link rel="icon" href="./img/favicon.ico">
 	</head>
 
 	<body>
