--- a/register.html
+++ b/register.html
@@ -4,6 +4,7 @@
 		<title>Collective Academy Directory</title>
 		<meta charset="UTF-8"/>
 		<link rel="stylesheet" href="css/register.css" type="text/css"/>
+		<link rel="icon" href="./img/favicon.ico">
 	</head>
 
 	<body>
