Include mentor in group filter

--- a/directory.html
+++ b/directory.html
@@ -54,6 +54,8 @@
 			    		<input type="checkbox" name="group[]" value="Mu"/>Mu
 			    		<input type="checkbox" name="group[]" value="Nu"/>Nu
 			    		<input type="checkbox" name="group[]" value="Xi"/>Xi
+			    		<br>
+			    		<input type="checkbox" name="group[]" value="Mentor"/>Mentor
 			    	</div>
 			    	<br>
 		    		<input type="submit" id="applyFilterButton" class="buttons" value="Aplicar"/>
