--- a/directory.html
+++ b/directory.html
@@ -16,12 +16,12 @@
 			<input type="submit" id="logOutButton" class="buttons" value="Salir"/>
 		</header>
 
+		<!-- FILTERS -->
 		<div class="filterBar">
 			<input type="text" id="searchBar" class="inputTexts" placeholder="Busca un contacto"/>
 			<input type="submit" id="searchButton" class="buttons" value="Buscar"/>
 			<input type="submit" id="clearButton" class="buttons" value="Limpiar"/>
 			
-
 			<div class="dropdown">
 				<input type="submit" class="buttons" value="Filtrar">
 				<div class="dropdown-content">
@@ -62,7 +62,6 @@
 				</div>
 			</div> 
 		</div>
-
 
 		<div class="container">
 			<ul class="cards">
