--- a/admin.html
+++ b/admin.html
@@ -19,15 +19,16 @@
 		<div class="adminDiv">
 			<form id="adminForm">
 				Correo del contacto que se desea editar
+				<br><br>
 				<input type="email" id="email" placeholder="Email" class="inputTexts"/>
-
+				<br><br>
 				<input type="submit" class="buttons" id="editButton" value="Editar"/>
 				<br>
 				<div id="editSection">
 				</div>
 
 				<br>
-				<input type="submit" id="updateButton" class="buttons" value="Actualizar"/>
+				<input type="submit" id="updateButton" class="buttons hiddenElement" value="Actualizar"/>
 			</form>
 		</div>
 		<script src="./js/jquery.js" type="text/javascript"></script>
